Work on page not found, under constroction and fix menu on mobile

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,7 +1,6 @@
 .link {
     color: #fff !important;
 }
-
-.link:hover {
-    font-size: 35px;
+.link:hover{
+    background-color: #224f5f;
 }
